# wagner

./: .gitignore  LICENSE  PROJECT_CONTEXT.md  README.md  build.bat  build.py  pyproject.toml
wagner/: __init__.py  app.py  backend.py
wagner/static/: index.html
